istio-test.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: dev-authentik-override
  namespace: dev
spec:
  hosts:
    - authentik.mortenolsen.nett
  ports:
    - number: 443
      name: https
      protocol: HTTPS
    - number: 80
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 1.1.1.1
      ports:
        https: 443
        http: 80
